--- a/Lab_OOP/challenge_01_.ipynb
+++ b/Lab_OOP/challenge_01_.ipynb
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,19 +522,19 @@
     "        self.ano = ano\n",
     "        self.preco = preco\n",
     "        self.portas = portas\n",
+    "        self.drawing = ''\n",
     "    \n",
     "    \n",
     "    def __repr__(self, drawing):\n",
     "        self.drawing = drawing\n",
-    "        return drawing\n",
     "\n",
     "    def get_itself(self):\n",
-    "        return drawing"
+    "        return self"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -557,30 +557,21 @@
     "'''\n",
     "\n",
     "ranger = Car('Black','Truck','2018','R$180.000')\n",
-    "#\n",
-    "print(ranger.__repr__(car))"
+    "ranger.__repr__(car)\n",
+    "print(ranger.drawing)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 707,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "\n",
-       "                   _\n",
-       " _________________| \\_\n",
-       "|   ___    |  ,|   ___`-.\n",
-       "|  /   \\   |___/  /   \\  `-.\n",
-       "|_| (O) |________| (O) |____|\n",
-       "   \\___/          \\___/"
-      ]
-     },
-     "execution_count": 707,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "\n                   _\n _________________| \\_\n|   ___    |  ,|   ___`-.\n|  /   \\   |___/  /   \\  `-.\n|_| (O) |________| (O) |____|\n   \\___/          \\___/\n\n"
+     ]
     }
    ],
    "source": [
@@ -592,7 +583,10 @@
     "|_| (O) |________| (O) |____|\n",
     "   \\___/          \\___/\n",
     "'''\n",
-    "\n"
+    "\n",
+    "ranger = Car('Black','Truck','2018','R$180.000')\n",
+    "ranger.__repr__(car)\n",
+    "print(ranger.drawing)"
    ]
   },
   {
