--- a/Lab_pandas/main.ipynb
+++ b/Lab_pandas/main.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -175,12 +175,13 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Score_1</th>\n      <th>Score_2</th>\n      <th>Score_3</th>\n      <th>Score_4</th>\n      <th>Score_5</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>53.1</td>\n      <td>95.0</td>\n      <td>67.5</td>\n      <td>35.0</td>\n      <td>78.4</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>61.3</td>\n      <td>40.8</td>\n      <td>30.8</td>\n      <td>37.8</td>\n      <td>87.6</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>20.6</td>\n      <td>73.2</td>\n      <td>44.2</td>\n      <td>14.6</td>\n      <td>91.8</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>57.4</td>\n      <td>0.1</td>\n      <td>96.1</td>\n      <td>4.2</td>\n      <td>69.5</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>83.6</td>\n      <td>20.5</td>\n      <td>85.4</td>\n      <td>22.8</td>\n      <td>35.9</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>49.0</td>\n      <td>69.0</td>\n      <td>0.1</td>\n      <td>31.8</td>\n      <td>89.1</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>23.3</td>\n      <td>40.7</td>\n      <td>95.0</td>\n      <td>83.8</td>\n      <td>26.9</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>27.6</td>\n      <td>26.4</td>\n      <td>53.8</td>\n      <td>88.8</td>\n      <td>68.5</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>96.6</td>\n      <td>96.4</td>\n      <td>53.4</td>\n      <td>72.4</td>\n      <td>50.1</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>73.7</td>\n      <td>39.0</td>\n      <td>43.2</td>\n      <td>81.6</td>\n      <td>34.7</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 54
+     "execution_count": 68
     }
    ],
    "source": [
     "# your code here\n",
-    "b.set_axis(colnames, axis='columns', inplace=False)\n"
+    "b = b.set_axis(colnames, axis='columns', inplace=False)\n",
+    "pd.DataFrame(b)"
    ]
   },
   {
@@ -192,11 +193,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "   Score_1  Score_3  Score_5\n",
+       "0     53.1     67.5     78.4\n",
+       "1     61.3     30.8     87.6\n",
+       "2     20.6     44.2     91.8\n",
+       "3     57.4     96.1     69.5\n",
+       "4     83.6     85.4     35.9\n",
+       "5     49.0      0.1     89.1\n",
+       "6     23.3     95.0     26.9\n",
+       "7     27.6     53.8     68.5\n",
+       "8     96.6     53.4     50.1\n",
+       "9     73.7     43.2     34.7"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Score_1</th>\n      <th>Score_3</th>\n      <th>Score_5</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>53.1</td>\n      <td>67.5</td>\n      <td>78.4</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>61.3</td>\n      <td>30.8</td>\n      <td>87.6</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>20.6</td>\n      <td>44.2</td>\n      <td>91.8</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>57.4</td>\n      <td>96.1</td>\n      <td>69.5</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>83.6</td>\n      <td>85.4</td>\n      <td>35.9</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>49.0</td>\n      <td>0.1</td>\n      <td>89.1</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>23.3</td>\n      <td>95.0</td>\n      <td>26.9</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>27.6</td>\n      <td>53.8</td>\n      <td>68.5</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>96.6</td>\n      <td>53.4</td>\n      <td>50.1</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>73.7</td>\n      <td>43.2</td>\n      <td>34.7</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 71
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "subset_b = b.loc[:,['Score_1','Score_3','Score_5']]\n",
+    "\n",
+    "pd.DataFrame(subset_b)"
    ]
   },
   {
@@ -208,11 +234,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "56.95000000000001"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 75
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "b['Score_3'].mean()"
    ]
   },
   {
@@ -224,11 +262,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "88.8"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 76
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "b['Score_4'].max()"
    ]
   },
   {
@@ -240,11 +290,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "40.75"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 77
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "b['Score_2'].median()"
    ]
   },
   {
@@ -256,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,11 +339,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                          Description  Quantity  UnitPrice  Revenue\n",
+       "0              LUNCH BAG APPLE DESIGN         1       1.65     1.65\n",
+       "1  SET OF 60 VINTAGE LEAF CAKE CASES         24       0.55    13.20\n",
+       "2         RIBBON REEL STRIPES DESIGN          1       1.65     1.65\n",
+       "3   WORLD WAR 2 GLIDERS ASSTD DESIGNS      2880       0.18   518.40\n",
+       "4    PLAYING CARDS JUBILEE UNION JACK         2       1.25     2.50\n",
+       "5                      POPCORN HOLDER         7       0.85     5.95\n",
+       "6      BOX OF VINTAGE ALPHABET BLOCKS         1      11.95    11.95\n",
+       "7                       PARTY BUNTING         4       4.95    19.80\n",
+       "8            JAZZ HEARTS ADDRESS BOOK        10       0.19     1.90\n",
+       "9       SET OF 4 SANTA PLACE SETTINGS        48       1.25    60.00"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Description</th>\n      <th>Quantity</th>\n      <th>UnitPrice</th>\n      <th>Revenue</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>LUNCH BAG APPLE DESIGN</td>\n      <td>1</td>\n      <td>1.65</td>\n      <td>1.65</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>SET OF 60 VINTAGE LEAF CAKE CASES</td>\n      <td>24</td>\n      <td>0.55</td>\n      <td>13.20</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>RIBBON REEL STRIPES DESIGN</td>\n      <td>1</td>\n      <td>1.65</td>\n      <td>1.65</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>WORLD WAR 2 GLIDERS ASSTD DESIGNS</td>\n      <td>2880</td>\n      <td>0.18</td>\n      <td>518.40</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>PLAYING CARDS JUBILEE UNION JACK</td>\n      <td>2</td>\n      <td>1.25</td>\n      <td>2.50</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>POPCORN HOLDER</td>\n      <td>7</td>\n      <td>0.85</td>\n      <td>5.95</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>BOX OF VINTAGE ALPHABET BLOCKS</td>\n      <td>1</td>\n      <td>11.95</td>\n      <td>11.95</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>PARTY BUNTING</td>\n      <td>4</td>\n      <td>4.95</td>\n      <td>19.80</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>JAZZ HEARTS ADDRESS BOOK</td>\n      <td>10</td>\n      <td>0.19</td>\n      <td>1.90</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>SET OF 4 SANTA PLACE SETTINGS</td>\n      <td>48</td>\n      <td>1.25</td>\n      <td>60.00</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 85
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "orders_df = pd.DataFrame(orders)\n",
+    "orders_df"
    ]
   },
   {
@@ -293,11 +379,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "2978 637.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "total_qtt_ordered = orders_df['Quantity'].sum()\n",
+    "revenue_df = orders_df['Revenue'].sum()\n"
    ]
   },
   {
@@ -309,12 +405,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "11.77\n"
+     ]
+    }
+   ],
+   "source": [
+    "# your code here\n",
+    "print(orders_df['UnitPrice'].max() - orders_df['UnitPrice'].min())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# your code here"
-   ]
+   "source": []
   }
  ],
  "metadata": {
