--- a/Lab_pandas/main.ipynb
+++ b/Lab_pandas/main.ipynb
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Description</th>\n      <th>Quantity</th>\n      <th>UnitPrice</th>\n      <th>Revenue</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>LUNCH BAG APPLE DESIGN</td>\n      <td>1</td>\n      <td>1.65</td>\n      <td>1.65</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>SET OF 60 VINTAGE LEAF CAKE CASES</td>\n      <td>24</td>\n      <td>0.55</td>\n      <td>13.20</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>RIBBON REEL STRIPES DESIGN</td>\n      <td>1</td>\n      <td>1.65</td>\n      <td>1.65</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>WORLD WAR 2 GLIDERS ASSTD DESIGNS</td>\n      <td>2880</td>\n      <td>0.18</td>\n      <td>518.40</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>PLAYING CARDS JUBILEE UNION JACK</td>\n      <td>2</td>\n      <td>1.25</td>\n      <td>2.50</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>POPCORN HOLDER</td>\n      <td>7</td>\n      <td>0.85</td>\n      <td>5.95</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>BOX OF VINTAGE ALPHABET BLOCKS</td>\n      <td>1</td>\n      <td>11.95</td>\n      <td>11.95</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>PARTY BUNTING</td>\n      <td>4</td>\n      <td>4.95</td>\n      <td>19.80</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>JAZZ HEARTS ADDRESS BOOK</td>\n      <td>10</td>\n      <td>0.19</td>\n      <td>1.90</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>SET OF 4 SANTA PLACE SETTINGS</td>\n      <td>48</td>\n      <td>1.25</td>\n      <td>60.00</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 85
+     "execution_count": 115
     }
    ],
    "source": [
@@ -379,21 +379,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 116,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "2978 637.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# your code here\n",
     "total_qtt_ordered = orders_df['Quantity'].sum()\n",
-    "revenue_df = orders_df['Revenue'].sum()\n"
+    "revenue_df = orders_df['Revenue'].sum()\n",
+    "order_df_total = orders_df.copy(deep=True)\n",
+    "order_df_total.loc[10] = ['Total:', orders_df['Quantity'].sum(), orders_df['UnitPrice'].sum(), orders_df['Revenue'].sum()]"
    ]
   },
   {
@@ -405,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -414,11 +408,35 @@
      "text": [
       "11.77\n"
      ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                           Description  Quantity  UnitPrice  Revenue\n",
+       "0               LUNCH BAG APPLE DESIGN         1       1.65     1.65\n",
+       "1   SET OF 60 VINTAGE LEAF CAKE CASES         24       0.55    13.20\n",
+       "2          RIBBON REEL STRIPES DESIGN          1       1.65     1.65\n",
+       "3    WORLD WAR 2 GLIDERS ASSTD DESIGNS      2880       0.18   518.40\n",
+       "4     PLAYING CARDS JUBILEE UNION JACK         2       1.25     2.50\n",
+       "5                       POPCORN HOLDER         7       0.85     5.95\n",
+       "6       BOX OF VINTAGE ALPHABET BLOCKS         1      11.95    11.95\n",
+       "7                        PARTY BUNTING         4       4.95    19.80\n",
+       "8             JAZZ HEARTS ADDRESS BOOK        10       0.19     1.90\n",
+       "9        SET OF 4 SANTA PLACE SETTINGS        48       1.25    60.00\n",
+       "10                              Total:      2978      24.47   637.00"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Description</th>\n      <th>Quantity</th>\n      <th>UnitPrice</th>\n      <th>Revenue</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>LUNCH BAG APPLE DESIGN</td>\n      <td>1</td>\n      <td>1.65</td>\n      <td>1.65</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>SET OF 60 VINTAGE LEAF CAKE CASES</td>\n      <td>24</td>\n      <td>0.55</td>\n      <td>13.20</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>RIBBON REEL STRIPES DESIGN</td>\n      <td>1</td>\n      <td>1.65</td>\n      <td>1.65</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>WORLD WAR 2 GLIDERS ASSTD DESIGNS</td>\n      <td>2880</td>\n      <td>0.18</td>\n      <td>518.40</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>PLAYING CARDS JUBILEE UNION JACK</td>\n      <td>2</td>\n      <td>1.25</td>\n      <td>2.50</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>POPCORN HOLDER</td>\n      <td>7</td>\n      <td>0.85</td>\n      <td>5.95</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>BOX OF VINTAGE ALPHABET BLOCKS</td>\n      <td>1</td>\n      <td>11.95</td>\n      <td>11.95</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>PARTY BUNTING</td>\n      <td>4</td>\n      <td>4.95</td>\n      <td>19.80</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>JAZZ HEARTS ADDRESS BOOK</td>\n      <td>10</td>\n      <td>0.19</td>\n      <td>1.90</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>SET OF 4 SANTA PLACE SETTINGS</td>\n      <td>48</td>\n      <td>1.25</td>\n      <td>60.00</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>Total:</td>\n      <td>2978</td>\n      <td>24.47</td>\n      <td>637.00</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 119
     }
    ],
    "source": [
     "# your code here\n",
-    "print(orders_df['UnitPrice'].max() - orders_df['UnitPrice'].min())"
+    "print(orders_df['UnitPrice'].max() - orders_df['UnitPrice'].min())\n",
+    "\n",
+    "order_df_total"
    ]
   },
   {
