--- a/Lab_linear_regr/your-code.ipynb
+++ b/Lab_linear_regr/your-code.ipynb
@@ -152,9 +152,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "   Age\n",
+       "0   17\n",
+       "1   51\n",
+       "2   27\n",
+       "3   21\n",
+       "4   36\n",
+       "5   48\n",
+       "6   19\n",
+       "7   26\n",
+       "8   54\n",
+       "9   30"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Age</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>17</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>51</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>27</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>21</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>36</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>48</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>19</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>26</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>54</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>30</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 47
+    }
+   ],
    "source": [
     "# Your response here.\n",
     "from sklearn.linear_model import LinearRegression\n",
@@ -164,7 +186,8 @@
     "\n",
     "model = LinearRegression()\n",
     "model.fit(X,y)\n",
-    "y_predict = model.predict(X)"
+    "y_predict = model.predict(X)\n",
+    "model.coef_\n"
    ]
   },
   {
@@ -237,11 +260,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import any libraries you may need & the data"
+    "# Import any libraries you may need & the data\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "cars = pd.DataFrame(pd.read_csv('vehicles.csv'))\n"
    ]
   },
   {
@@ -255,11 +285,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your response here. "
+    "# Your response here. \n",
+    "cars.columns\n",
+    "X = cars[['Year', 'Cylinders', 'Fuel Barrels/Year', 'Combined MPG', 'Fuel Cost/Year']]\n",
+    "y = cars['CO2 Emission Grams/Mile']\n",
+    "cars.corr()\n",
+    "X_std = (X- X.mean())/X.std()"
    ]
   },
   {
@@ -271,11 +306,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([-0.32061673,  1.87879976, 19.05292507, -3.04039938,  0.03230948])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 64
+    }
+   ],
    "source": [
-    "# Your response here. "
+    "# Your response here. \n",
+    "model.fit(X,y)\n",
+    "model.score(X,y)\n",
+    "model.coef_"
    ]
   },
   {
@@ -287,11 +336,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([-0.32061673,  1.87879976, 19.05292507, -3.04039938,  0.03230948])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 43
+    }
+   ],
    "source": [
-    "# Your response here. "
+    "# Your response here. \n",
+    "from sklearn.metrics import classification_report\n",
+    "y_p = model.predict(X)\n",
+    "model.score(X,y)\n",
+    "model.coef_"
    ]
   },
   {
