--- a/Lab_titanic_2/titanic-classification-lab.ipynb
+++ b/Lab_titanic_2/titanic-classification-lab.ipynb
@@ -20,12 +20,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "     Pclass   Age  SibSp  Parch      Fare  Sex_male  Embarked_Q  Embarked_S  \\\n",
+       "0         2  27.0      0      0   13.0000         1           0           1   \n",
+       "1         1  51.0      0      1   61.3792         1           0           0   \n",
+       "2         1  23.0      1      0  113.2750         0           0           0   \n",
+       "3         3  28.5      0      0    7.2292         1           0           0   \n",
+       "4         3  38.0      1      5   31.3875         0           0           1   \n",
+       "..      ...   ...    ...    ...       ...       ...         ...         ...   \n",
+       "529       3  34.0      0      0    8.0500         1           0           1   \n",
+       "530       1  25.0      1      0   55.4417         1           0           0   \n",
+       "531       1  21.0      0      1   77.2875         1           0           1   \n",
+       "532       3  19.0      0      0    8.0500         1           0           1   \n",
+       "533       1  18.0      2      2  262.3750         0           0           0   \n",
+       "\n",
+       "     y_train  \n",
+       "0          0  \n",
+       "1          0  \n",
+       "2          1  \n",
+       "3          0  \n",
+       "4          1  \n",
+       "..       ...  \n",
+       "529        0  \n",
+       "530        1  \n",
+       "531        0  \n",
+       "532        0  \n",
+       "533        1  \n",
+       "\n",
+       "[534 rows x 9 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Pclass</th>\n      <th>Age</th>\n      <th>SibSp</th>\n      <th>Parch</th>\n      <th>Fare</th>\n      <th>Sex_male</th>\n      <th>Embarked_Q</th>\n      <th>Embarked_S</th>\n      <th>y_train</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2</td>\n      <td>27.0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>13.0000</td>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>51.0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>61.3792</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1</td>\n      <td>23.0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>113.2750</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>28.5</td>\n      <td>0</td>\n      <td>0</td>\n      <td>7.2292</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>3</td>\n      <td>38.0</td>\n      <td>1</td>\n      <td>5</td>\n      <td>31.3875</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>529</th>\n      <td>3</td>\n      <td>34.0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>8.0500</td>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>530</th>\n      <td>1</td>\n      <td>25.0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>55.4417</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>531</th>\n      <td>1</td>\n      <td>21.0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>77.2875</td>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>532</th>\n      <td>3</td>\n      <td>19.0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>8.0500</td>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>533</th>\n      <td>1</td>\n      <td>18.0</td>\n      <td>2</td>\n      <td>2</td>\n      <td>262.3750</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n<p>534 rows × 9 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
    "source": [
     "titanic_train = pd.DataFrame(pd.read_csv('../Lab_titanic/titanic_train.csv'))\n",
-    "titanic_test = pd.DataFrame(pd.read_csv('../Lab_titanic/titanic_test.csv'))"
+    "titanic_test = pd.DataFrame(pd.read_csv('../Lab_titanic/titanic_test.csv'))\n",
+    "titanic_train"
    ]
   },
   {
@@ -41,10 +80,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_train = titanic_train.loc[:,titanic_train.columns != 'y_train']\n",
+    "y_train = titanic_train['y_train']\n",
+    "X_test = titanic_test.loc[:,titanic_test.columns != 'y_test']\n",
+    "y_test = titanic_test['y_test']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -80,10 +124,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "LogisticRegression(max_iter=100000)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 16
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "model = LogisticRegression(max_iter=100000)\n",
+    "model.fit(X_train,y_train)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -98,11 +157,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = logistic_model.predict(x_test)"
+    "y_pred = model.predict(X_test)\n",
+    "y_pred_train = model.predict(X_train)"
    ]
   },
   {
@@ -131,6 +191,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[70, 23],\n",
+       "       [27, 58]], dtype=int64)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 21
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import  confusion_matrix\n",
+    "confusion_matrix(y_test,y_pred)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -140,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,10 +241,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "col_0    0   1\n",
+       "y_test        \n",
+       "0       70  23\n",
+       "1       27  58"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>col_0</th>\n      <th>0</th>\n      <th>1</th>\n    </tr>\n    <tr>\n      <th>y_test</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>70</td>\n      <td>23</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>27</td>\n      <td>58</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 24
+    }
+   ],
+   "source": [
+    "titanic_crosstab = pd.crosstab(y_test,y_pred)\n",
+    "titanic_crosstab"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -173,10 +273,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[70, 23],\n",
+       "       [27, 58]], dtype=int64)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 25
+    }
+   ],
+   "source": [
+    "confusion_matrix(y_test,y_pred)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -192,17 +306,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Precision = TP/(TP+FP)\n",
+    "# Recall = TP/(TP+FN)\n",
+    "from sklearn import metrics\n",
+    "precision_test = metrics.precision_score(y_test,y_pred)\n",
+    "recall_test = metrics.recall_score(y_test,y_pred)\n",
+    "accuracy_test = metrics.accuracy_score(y_test,y_pred)\n",
+    "#precision = titanic_crosstab.loc[1,1]/(titanic_crosstab.loc[1,1]+titanic_crosstab.loc[0,1])\n",
+    "#recall = titanic_crosstab.loc[1,1]/(titanic_crosstab.loc[1,1]+titanic_crosstab.loc[1,0])\n",
+    "#pre = precision_score()\n",
+    "precision_train = metrics.precision_score(y_train,y_pred_train)\n",
+    "recall_train = metrics.recall_score(y_train,y_pred_train)\n",
+    "accuracy_train = metrics.accuracy_score(y_train,y_pred_train)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mts_test = (precision_test, recall_test, accuracy_test)\n",
+    "mts_train = (precision_train,recall_train,accuracy_train)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -213,10 +343,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Precision, recall and accuracy for test: (0.7160493827160493, 0.6823529411764706, 0.7191011235955056)\nPrecision, recall and accuracy for train: (0.7837837837837838, 0.7142857142857143, 0.8164794007490637)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Precision, recall and accuracy for test:',mts_test)\n",
+    "print('Precision, recall and accuracy for train:',mts_train)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -233,17 +374,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "col_0    0   1\n",
+       "y_test        \n",
+       "0       70  23\n",
+       "1       27  58"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>col_0</th>\n      <th>0</th>\n      <th>1</th>\n    </tr>\n    <tr>\n      <th>y_test</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>70</td>\n      <td>23</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>27</td>\n      <td>58</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 46
+    }
+   ],
+   "source": [
+    "titanic_crosstab"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'''\n",
+    "1. TRUE POSITIVES: 58\n",
+    "2. TRUE NEGATIVES: 70\n",
+    "3. FALSE POSITIVES: 23\n",
+    "4. FALSE NEGATIVES: 27\n",
+    "'''"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -254,16 +419,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Precision = TP/(TP+FP)\n",
+    "precision = titanic_crosstab.loc[1,1]/(titanic_crosstab.loc[1,1]+titanic_crosstab.loc[0,1])"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Explain with your own words the meaning of the precision score."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Precision is how much the model predicts correctly a positive instance\n",
+    "# So the higher the precision, the number"
    ]
   },
   {
@@ -275,10 +453,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.6823529411764706"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 50
+    }
+   ],
+   "source": [
+    "# Recall = TP/(TP+FN)\n",
+    "recall = titanic_crosstab.loc[1,1]/(titanic_crosstab.loc[1,1]+titanic_crosstab.loc[1,0])\n",
+    "recall"
+   ]
   },
   {
    "cell_type": "markdown",
